syntax = "proto3";
package grpc;

option go_package = "https://github.com/DonCrastiv/INF-343/protoNameData";


/*REGISTRAR JUGADAS*/
message JugadaToData{
    int32 idJugador = 1;
    int32 jugada = 2;
    int32 etapa = 3;
}

message RespuestaJugada {
    repeated int32 jugadas = 1;
    int32 cantidad = 2;
}

service NameDataService {
    rpc RegistrarJugadas (JugadaToData) returns (RespuestaJugada);
}
